--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
               <a href="data/PSO.pdf">PSO report</a> /
               <a href="data/Genetic.pdf">Genetic report</a> /
               <a href="data/Memetic.pdf">Memetic report</a> /
-              <a href="https://github.com/GSDante/gaslift"> code
+              <a href="https://github.com/GSDante/gaslift"> code </a>
               <p></p>
               <p>Implementation of meta-heuristic techniques such as GRASP, ant colony, particle swarm, genetic and memetic algorithm to optimize gas lift problem, that is, minimize the amount of gas injected given a pre-planned amount of oil. The reports are PT-BR.
               </p>
