--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <p style="text-align:center">
                 <name>Giovanne Santos</name>
               </p>
-              <p>I am a student of Information Technology and Computer Science at the <a href="https://ufrn.br/en">Federal University of Rio grande do Norte</a>.
+              <p>I am a student of Information Technology and Computer Science at the <a href="https://ufrn.br/en">Federal University of Rio Grande do Norte</a>.
               </p>
               <p>
                 I am currently on the ANP research grant. The research involves the development of meta-heuristic techniques to minimize gas injection given a pre-planned amount of oil.
