--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
               
               <p style="text-align:center">
                 <a href="mailto:giovannedssantos@gmail.com">Email</a> &nbsp/&nbsp
-                <a href="data/GiovanneCV.pdf">CV</a> &nbsp/&nbsp
+                <a href="data/CV_EN.pdf">CV(EN)</a> &nbsp/&nbsp
+                <a href="data/CV_PT_BR.pdf">CV(PT-BR)</a> &nbsp/&nbsp
                 <a href="https://github.com/GSDante/">Github</a> &nbsp/&nbsp
                 <a href="https://www.linkedin.com/in/giovanne-santos-2b9246a7/">LinkedIn</a>
               </p>
